Domains: Fix back button behavior for "Use a domain I own" flow on onboarding (#57914)
* Prefer unescaped query params for better visibility

* Pass all values at once to `insertUrlParams` method

* Minor variable renaming

* Add default `domainInput` mode

* Fix mobile style for break on domain name when overflowing

--- a/client/components/domains/use-my-domain/style.scss
+++ b/client/components/domains/use-my-domain/style.scss
@@ -8,6 +8,13 @@
 	flex-direction: column;
 	padding: 36px 24px;
 
+	&__page-heading {
+		.formatted-header__title {
+			display: flex;
+			flex-wrap: wrap;
+		}
+	}
+
 	& &__domain-illustration {
 		//margin-top: 56px;
 	}
